--- a/practice1.html
+++ b/practice1.html
@@ -1,7 +1,6 @@
 ★ Code : https://codepen.io/
    Here, you can code 'html' and see how it works directly
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +21,7 @@
   <p>Free shipping</p>
   <p>Ready to dress up or down, these classic canvas Chunks are an everyday wardrobe staple.</p>
   
+     <!--&rarr; : right arrow-->
     <a href="#">More information &rarr;</a>
   <h3>Product details</h3>
   <ul>
