--- a/practice.html
+++ b/practice.html
@@ -20,13 +20,24 @@
 
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
-      <p>
+      <p class="sale">Sale</p>
+      <p class="product-description">
         Ready to dress up or down, these classic canvas Chunks are an everyday
         wardrobe staple.
       </p>
-
+      
       <!--&rarr; : right arrow-->
-      <a class="more-info" href="#">More information &rarr;</a>
+      <a href="https://converse.com" target="_blank" class="more-info">More information &rarr;</a>
+      
+      <div class="colors">
+        <div class="color"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>        
+      </div>
+
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
