--- a/v2_index.html
+++ b/v2_index.html
@@ -53,7 +53,7 @@ if the name should be combined by two or more words
         <h1>📘 The Code Magazine</h1>
 
         <nav>
-          <a href="img/blog.html">Blog</a>
+          <a href="blog.html">Blog</a>
           <a href="#">Challenges</a>
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
