--- a/v1_index.html
+++ b/v1_index.html
@@ -46,7 +46,7 @@ But, it doesn't have any meaning (not semantic)
           but doesn't point anywhere (no page)
     -->
       <nav>
-        <a href="img/blog.html">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
