--- a/v3_index_float.html
+++ b/v3_index_float.html
@@ -141,7 +141,7 @@
           <li>
             <img
               src="img/related-3.jpg"
-              alt="LittlePic"
+              alt="JavaScript code on a screen"
               width="75"
               height="75"
             />
