--- a/v2_index.html
+++ b/v2_index.html
@@ -179,7 +179,7 @@ if the name should be combined by two or more words
           <li>
             <img
               src="img/related-3.jpg"
-              alt="LittlePic"
+              alt="JavaScript code on a screen"
               width="75"
               height="75"
             />
