--- a/v1_index.html
+++ b/v1_index.html
@@ -195,7 +195,7 @@ But, it doesn't have any meaning (not semantic)
           <p>By Jim Dillon</p>
         </li>
         <li>
-          <img src="img/related-3.jpg" alt="LittlePic" width="75" height="75" />
+          <img src="img/related-3.jpg" alt="JavaScript code on a screen" width="75" height="75" />
           <a href="#" target="_blank">Why JavaScript is Awesome</a>
           <p>By Matilda</p>
         </li>
