--- a/vscode_03_omnifood/index.html
+++ b/vscode_03_omnifood/index.html
@@ -19,7 +19,7 @@
     ★ So, always include this line of code! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ★ This is the image appeared at the top tap section when this web page is opend
+    <!-- ★ This is the image appeared at the top tab section when this web page is opend
     for the browser : The size should be 64px * 64px -->
     <link rel="icon" href="img/favicon.png" />
     <!-- for iOS : size 180px * 180px -->
